# demonophobia-cpp

./: .gitattributes  .gitignore  CMakeLists.txt  CONTROL.md  README.md  TODO.md  build.bat  conanfile.txt
src/: main.cpp
src/core/: animation.cpp  animation.hpp  debug.cpp  debug.hpp  sprite_sheet.cpp  sprite_sheet.hpp  window.cpp  window.hpp
src/manager/: texture_manager.cpp  texture_manager.hpp
src/object/: hero.cpp  hero.hpp  object.hpp  wall.cpp  wall.hpp
src/scene/: scene.cpp  scene.hpp
src/scene/location/: room.cpp  room.hpp
src/scene/location/custom/room/: room1.cpp  room1.hpp  room2.cpp  room2.hpp
src/state/: state.hpp
src/state/custom/hero/: crawl.cpp  crawl.hpp  halfsit.cpp  halfsit.hpp  idle.hpp  move.cpp  move.hpp  sit.cpp  sit.hpp
src/state/custom_state/hero/: crawl.cpp  crawl.hpp  halfsit.hpp  idle.cpp  idle.hpp  include.hpp  move.cpp  move.hpp  sit.cpp  sit.hpp
